--- a/DB/カラムの追加と削除.md
+++ b/DB/カラムの追加と削除.md
@@ -1,14 +1,14 @@
 ##SQL
 - **カラムの追加**
 
-```
+```sql
 alter table テーブル名 add(
 追加したいカラム名 varchar2(13));
 ```
 
 - **カラムの削除**
 
-```
+```sql
 ALTER TABLE テーブル名 drop column
 消したいカラム名;
 ```
