--- a/Java/数値⇔文字列の変換方法.md
+++ b/Java/数値⇔文字列の変換方法.md
@@ -1,14 +1,14 @@
 
-#数値⇔文字列変換方法#
+# 数値⇔文字列変換方法
 
-###数値⇒文字列###
+### 数値⇒文字列
 ```java
 String s = String.valueOf(i);
 ```
 
-###文字列⇒数値###
+### 文字列⇒数値
 ```java
 int i = Integer.parseInt(s);
 ```
-※補足：型変換はJavaのバージョンがあがるごとに変換スピードも上がる
+※point：型変換はJavaのバージョンがあがるごとに変換スピードも上がる
 
