--- a/Java/文字・数字をゼロ埋め半角スペース埋めする方法.md
+++ b/Java/文字・数字をゼロ埋め半角スペース埋めする方法.md
@@ -8,7 +8,7 @@ String.format("%8s", 123456);
 String.format("%-8s", 123456);
 
 //文字の先頭を0埋めする
-String.format("%08s", 123456);
+String.format("%08d", 123456);
 
 
 //おまけ
