--- a/Github/競合の解決方法.md
+++ b/Github/競合の解決方法.md
@@ -2,7 +2,34 @@
 
 # 競合の解決方法
 
-[競合の解決方法](https://github.com/occ-corp/zaimu/blob/master/document/development/conflict.md)
+### 競合が発生した場合の解消手順(Eclipse)
+
+1. ローカルのmasterブランチを最新にする
+  * ブランチをmasterに切り替えて、プルを行う。
+
+2. 競合が発生しているトピックブランチに切り替える
+
+3. マージする
+  * [パッケージ・エクスプローラー]からコンテキストメニューを表示し、[チーム]→[マージ(M)...]を選択する。
+  * マージするためのサブウィンドウが表示されるので、[ローカル]から[master]を選択する。
+  * [Merge options]で[コミット(C)(commit the result)]を選択する。
+  * [Fast forward options]で[If a fast-forward, only update the branch pointer(O)]を選択する。
+  * [マージ(M)]ボタンを押下する。
+
+4. 競合を解消する
+  * [パッケージ・エクスプローラー]から競合マークが表示されているファイルを右クリックし、[チーム]→[マージ・ツール]を選択する。
+  * マージ・ツールを使用して、競合を解消する。
+
+5. 競合マークを消す
+  * 競合マークが表示されているファイルを右クリックし、[チーム]→[索引に追加(A)]を選択する。
+
+6. コミットする
+  * 必要なファイルだけをコミットする。
+  * 余計なファイルがコミット一覧に表示される場合は、変更点をなくす。
+
+7. pushする
+  * コミットしたらブランチをpushする。
+
 
 
 ---------
