--- a/DB/エクスポートとインポート.md
+++ b/DB/エクスポートとインポート.md
@@ -1,6 +1,6 @@
 
 
-#エクスポートする#
+# エクスポートする
 
 1.windowsのコマンドプロンプトでスタートメニューで「cmd」を検索
 
@@ -14,7 +14,7 @@ EXP USERID=コピー先ＤＢ名/コピー先のパスワード@ORCL FILE=RUKA.D
 
 
 
-#インポートする#
+# インポートする
 
 1.windowsのコマンドプロンプトでスタートメニューで「cmd」を検索
 
@@ -36,9 +36,9 @@ IMP USERID=コピー先ＤＢ名/コピー先のパスワード@ORCL FILE=RUKA_D
 IMP USERID=RUKA/RUKA@ORCL tables=指定したいテーブル名 file=C:RUKA_DMPが入って場所
 ```
 
-================================================================================================
+---
 
-###※３、の手順で「インポートは正常に終了しましたが、警告が発生しました。」と表示された時、、###
+### ※３、の手順で「インポートは正常に終了しましたが、警告が発生しました。」と表示された時、、
 
 原因：　インポート先に同名のオブジェクトがある場合、エラーとなる
 
